[package]
name = "playz-user"
version = "0.1.0"
authors = ["ungaro <alp.guneysel@gmail.com>"]
edition = "2018"


[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = {version = "0.4.13", features = ["serde"] }
dotenv = "0.15.0"
dotenv_codegen="0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
base64 = "0.12.3"
qstring = "0.7.2"
r2d2_redis = "0.13.0"
r2d2_redis_cluster = "0.1.5"
thiserror = "1.0"
redis = "0.16.0"
rusoto_core = "0.45.0"
rusoto_iam	= "0.45.0"
rusoto_sqs = "0.45.0"
rusoto_rds = "0.45.0"
rusoto_secretsmanager = "0.45.0"


[dependencies.diesel]
version = "1.4.3"
default-features = false
features = ["r2d2","mysql", "chrono","numeric","32-column-tables","64-column-tables"]
bigdecimal = "0.0.14"
